# minitorch

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  requirements.extra.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: minitorch.yml
minitorch/: __init__.py  autodiff.py  cuda_ops.py  datasets.py  fast_conv.py  fast_ops.py  module.py  modules.py  nn.py  operators.py  optim.py  scalar.py  scalar_functions.py  tensor.py  tensor_data.py  tensor_functions.py  tensor_ops.py  testing.py
project/: __init__.py  app.py  graph_builder.py  math_interface.py  minitorch_datasets.py  module_interface.py  parallel_check.py  run_fast_tensor.py  run_manual.py  run_mnist.py  run_mnist_interface.py  run_mnist_multiclass.py  run_scalar.py  run_sentiment.py  run_tensor.py  run_torch.py  run_torch_sentiment.py  sentiment_interface.py  show_expression.py  show_expression_interface.py  show_tensor.py  tensor_interface.py  train_utils.py
project/interface/: mlprimer.py  plots.py  streamlit_utils.py  train.py
tests/: benchmark.py  run_simply.py  strategies.py  tensor_strategies.py  test_autodiff.py  test_conv.py  test_module.py  test_modules.py  test_nn.py  test_operators.py  test_scalar.py  test_tensor.py  test_tensor_data.py  test_tensor_general.py
