[metadata]
name=minitorch
version=0.2

[files]
packages =
    minitorch

[darglint]
ignore_regex=((^_(.*))|(.*map)|(.*zip)|(.*reduce)|(test.*)|(tensor_.*))
docstring_style=google
strictness=short

[flake8]
ignore = N801, E203, E266, E501, W503, F812, E741, N803, N802, N806
exclude = .git,__pycache__,docs/,old,build,dist

[tool:pytest]
markers =
        task0_0
        task0_1
        task0_2
        task0_3
        task0_4
        task1_0
        task1_1
        task1_2
        task1_3
        task1_4
        task2_0
        task2_1
        task2_2
        task2_3
        task2_4
        task3_0
        task3_1
        task3_2
        task3_3
        task3_4
        task4_0
        task4_1
        task4_2
        task4_3
        task4_4
